# past-years

./: .pre-commit-config.yaml  README.md
backend/: .gitignore  README.md  pyproject.toml
backend/dev/: README.md  db.py  errors.py  index.py  pasty.py  random_data.json  random_data.py  words.txt
backend/dev/mock_data/: user.json
backend/past_years/: .config.toml  auth_utils.py  config.py  configuration.py  context.py  errors.py  main.py  utils.py
backend/past_years/api/: app.py  dependencies.py  request.py  request_context.py
backend/past_years/api/endpoints/: __init__.py  incorrect_question_endpoint.py  login_endpoint.py  questions_endpoint.py
backend/past_years/api/handlers/: __init__.py  media_handlers.py
backend/past_years/api/middlewares/: __init__.py  auth_middleware.py  compression_middleware.py  logging_middleware.py
backend/past_years/auth/: __init__.py  auth_utils.py  token_service.py
backend/past_years/db/: __init__.py  db.py  schemas.py  users_db.py
backend/past_years/github/: __init__.py  gh_client.py
backend/past_years/incorrect/: __init__.py  incorrect_question.py
backend/past_years/search/: __init__.py  factories.py  query_searcher.py  question_bank.py  search_engine.py  search_types.py
backend/sql/: setup.sql  users.sql
backend/tests/: conftest.py  setup.py  test_miscellaneous.py  utils.py
backend/tests/data/: .qindex.json  questions.json
backend/tests/data/db/: users.json
backend/tests/test_db/: test_users_db.py
backend/tests/test_endpoints/: test_login_endpoint.py
backend/tests/test_search/: test_factories.py  test_question_bank.py
frontend/: index.html  package.json  (+1 more)
(+29 files in other folders)
